fix banner not showing the right background color on mobile screen

--- a/themes/coop-radio/style.css
+++ b/themes/coop-radio/style.css
@@ -1863,7 +1863,7 @@ a {
 .donate-page section {
   margin: 5%; }
 
-.page-id-55 .link-btn-wrapper {
+.donate-page .link-btn-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2154,42 +2154,26 @@ ul {
 /*--------------------------------------------------------------
 # Search-result Page
 --------------------------------------------------------------*/
-.search-results .banner {
-  position: initial; }
-
-.search-results main {
-  background-color: #2c2c2c;
-  max-height: 75vh; }
-  @media (min-height: 650px) {
-    .search-results main {
-      max-height: 78vh;
-      min-height: 78vh; } }
-  @media (min-height: 750px) {
-    .search-results main {
-      max-height: 81vh;
-      min-height: 81vh; } }
-  @media (min-height: 1000px) {
-    .search-results main {
-      max-height: 86vh;
-      min-height: 86vh; } }
-  .search-results main .search-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    margin: 0 auto;
-    width: 80%;
-    color: white;
-    height: initial; }
-    .search-results main .search-container a {
-      color: inherit; }
-    .search-results main .search-container article {
+.search-results {
+  background-color: #2c2c2c; }
+  .search-results .banner {
+    position: initial; }
+  .search-results main {
+    background-color: #2c2c2c;
+    max-height: 75vh; }
+    @media (min-height: 650px) {
+      .search-results main {
+        max-height: 78vh;
+        min-height: 78vh; } }
+    @media (min-height: 750px) {
+      .search-results main {
+        max-height: 81vh;
+        min-height: 81vh; } }
+    @media (min-height: 1000px) {
+      .search-results main {
+        max-height: 86vh;
+        min-height: 86vh; } }
+    .search-results main .search-container {
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
@@ -2200,17 +2184,34 @@ ul {
       -webkit-box-align: center;
           -ms-flex-align: center;
               align-items: center;
-      margin: 1rem auto;
+      margin: 0 auto;
       width: 80%;
-      border: 1px solid #ffffff; }
-      .search-results main .search-container article p {
-        text-align: center; }
-        .search-results main .search-container article p .read-more {
-          border: 1px solid #fff;
-          padding: 0.5rem;
-          font-size: 0.8rem; }
-  .search-results main .search-pagination a {
-    margin: 1rem; }
+      color: white;
+      height: initial; }
+      .search-results main .search-container a {
+        color: inherit; }
+      .search-results main .search-container article {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        margin: 1rem auto;
+        width: 80%;
+        border: 1px solid #ffffff; }
+        .search-results main .search-container article p {
+          text-align: center; }
+          .search-results main .search-container article p .read-more {
+            border: 1px solid #fff;
+            padding: 0.5rem;
+            font-size: 0.8rem; }
+    .search-results main .search-pagination a {
+      margin: 1rem; }
 
 /*--------------------------------------------------------------
 # Search Page
